--- a/Views/Shared/ProjectCreate.cshtml
+++ b/Views/Shared/ProjectCreate.cshtml
@@ -35,8 +35,8 @@
     <label>Стадии проекта (через запятую)</label>
     <textarea name="allStages" asp-for="nullProject.allStages" class="form-control"></textarea>
 
-
-
+    
     <input class="btn-white" type="submit" value="Сохранить"
-           asp-controller="Home" asp-action="addProjectToDB" />
+           asp-controller="Home" asp-action="addProjectToDB" asp-route-activTable="@Model.activeTableIndex"/>
+
 </form>
