--- a/Views/Shared/StaffTableTest.cshtml
+++ b/Views/Shared/StaffTableTest.cshtml
@@ -23,26 +23,26 @@
         if (i == 0)
         {
             <tr id="title">
-                <th colspan="12" style="text-align:left ;background-color:#cccccc">Выполненные задачи </th>
+                <th colspan="@(Model.projects.Count()+2)" style="text-align:left ;background-color:#cccccc">Выполненные задачи </th>
             </tr>
             List<Task> Taskss = Model.tasks.Where(p => p.date.Date < DateTime.Now.Date).Where(p => p.status == "Выполнена").OrderBy(p => p.date).ToList();
-            for(int j = 0; j < Taskss.Count(); j++)
+            for (int j = 0; j < Taskss.Count(); j++)
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
                     <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
                         {
                             <td>Нет задач</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status == "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status == "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
                                 {
-                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-Taskid="@task1.id">
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
                                     </a>
                                 }
@@ -55,26 +55,26 @@
         if (i == 1)
         {
             <tr id="title">
-                <th colspan="12" style="text-align:left ;background-color:#cccccc">Задачи на сегодня</th>
+                <th colspan="@(Model.projects.Count()+2)" style="text-align:left ;background-color:#cccccc">Задачи на сегодня</th>
             </tr>
             List<Tasks> Taskss = Model.tasks.Where(p => p.date.Date <= DateTime.Now.Date).Where(p => p.status != "Выполнена").OrderBy(p => p.date).ToList();
             for (int j = 0; j < Taskss.Count(); j++)
             {
-                if( j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
+                if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
                     <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
                             <td>Нет задач</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
                                 {
-                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-Taskid="@task1.id">
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
                                     </a>
                                 }
@@ -87,26 +87,26 @@
         if (i == 2)
         {
             <tr id="title">
-                <th colspan="12" style="text-align:left ;background-color:#cccccc">Предстоящие задачи</th>
+                <th colspan="@(Model.projects.Count()+2)" style="text-align:left ;background-color:#cccccc">Предстоящие задачи</th>
             </tr>
             List<Tasks> Taskss = Model.tasks.Where(p => p.date.Date > DateTime.Now.Date).Where(p => p.status != "Выполнена").OrderBy(p => p.date).ToList();
             for (int j = 0; j < Taskss.Count(); j++)
             {
-                if(j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
+                if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
                     <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
                             <td>Нет задач</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
                                 {
-                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-Taskid="@task1.id">
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
                                     </a>
                                 }
